# fashion-mnist-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fmnist/: data.py  evaluate.py  random_forest.py
notebooks/: report.ipynb
tests/: smoke_test.py  test_data.py  test_evaluate.py
