[project]
name = "fmnist"

version = "0.1.0"
description = "Benchmarking a CNN against a Random Forest on Fashion-MNIST."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Dino Smuc", email = "dino.smuc@gmail.com" }]

dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "scikit-learn>=1.5.0",
    "scikit-image>=0.25.0",
    "mlflow>=3.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2",
    "matplotlib>=3.10.0",
    "joblib>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "ipykernel>=7.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fmnist"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
